--- a/trunk/shaman/ui/reviewQueueDialog.ui
+++ b/trunk/shaman/ui/reviewQueueDialog.ui
@@ -13,7 +13,7 @@
    <string>Review Queue</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-yellow-icon-32.png</iconset>
+   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/shaman-yellow-icon-32.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="1" column="0" >
@@ -54,7 +54,7 @@
           <string>Show packages...</string>
          </property>
          <property name="icon" >
-          <iconset resource="qtpacman.qrc" >:/Icons/icons/view-list-tree.png</iconset>
+          <iconset resource="shaman.qrc" >:/Icons/icons/view-list-tree.png</iconset>
          </property>
          <property name="checkable" >
           <bool>true</bool>
@@ -93,7 +93,7 @@
           <string>Cancel</string>
          </property>
          <property name="icon" >
-          <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+          <iconset resource="shaman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
          </property>
         </widget>
        </item>
@@ -116,7 +116,7 @@
           <string>Process</string>
          </property>
          <property name="icon" >
-          <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-ok-apply.png</iconset>
+          <iconset resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</iconset>
          </property>
         </widget>
        </item>
@@ -167,7 +167,7 @@ p, li { white-space: pre-wrap; }
          <string/>
         </property>
         <property name="pixmap" >
-         <pixmap resource="qtpacman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
+         <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
         </property>
         <property name="scaledContents" >
          <bool>true</bool>
@@ -180,7 +180,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections>
   <connection>
