--- a/trunk/shaman/ui/upgradeDialog.ui
+++ b/trunk/shaman/ui/upgradeDialog.ui
@@ -13,7 +13,7 @@
    <string>System Upgrade</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
+   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="1" column="1" >
@@ -68,7 +68,7 @@
         <string>Abort</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
        </property>
       </widget>
      </item>
@@ -91,7 +91,7 @@
         <string>Show packages...</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/view-list-tree.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/view-list-tree.png</iconset>
        </property>
        <property name="checkable" >
         <bool>true</bool>
@@ -104,7 +104,7 @@
         <string>Add to Queue</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/list-add.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/list-add.png</iconset>
        </property>
       </widget>
      </item>
@@ -114,7 +114,7 @@
         <string>Upgrade Now</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-ok-apply.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</iconset>
        </property>
       </widget>
      </item>
@@ -157,7 +157,7 @@ p, li { white-space: pre-wrap; }
          <string/>
         </property>
         <property name="pixmap" >
-         <pixmap resource="qtpacman.qrc" >:/Icons/icons/system-software-update.png</pixmap>
+         <pixmap resource="shaman.qrc" >:/Icons/icons/system-software-update.png</pixmap>
         </property>
         <property name="scaledContents" >
          <bool>true</bool>
@@ -179,7 +179,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections>
   <connection>
