--- a/trunk/shaman/ui/aboutDialog.ui
+++ b/trunk/shaman/ui/aboutDialog.ui
@@ -13,7 +13,7 @@
    <string>About Shaman</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-32.png</iconset>
+   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/shaman-32.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" colspan="2" >
@@ -49,7 +49,7 @@
          <string/>
         </property>
         <property name="pixmap" >
-         <pixmap resource="qtpacman.qrc" >:/Icons/icons/help-about.png</pixmap>
+         <pixmap resource="shaman.qrc" >:/Icons/icons/help-about.png</pixmap>
         </property>
         <property name="scaledContents" >
          <bool>true</bool>
@@ -85,7 +85,7 @@ p, li { white-space: pre-wrap; }
        <string>About</string>
       </attribute>
       <attribute name="icon" >
-       <iconset resource="qtpacman.qrc" >:/Icons/icons/help-about.png</iconset>
+       <iconset resource="shaman.qrc" >:/Icons/icons/help-about.png</iconset>
       </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
@@ -102,7 +102,7 @@ p, li { white-space: pre-wrap; }
        <string>Authors</string>
       </attribute>
       <attribute name="icon" >
-       <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
+       <iconset resource="shaman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
       </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
@@ -127,7 +127,7 @@ p, li { white-space: pre-wrap; }
        <string>Thanks To</string>
       </attribute>
       <attribute name="icon" >
-       <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
+       <iconset resource="shaman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
       </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
@@ -222,7 +222,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections>
   <connection>
