--- a/trunk/shaman/ui/buildingDialog.ui
+++ b/trunk/shaman/ui/buildingDialog.ui
@@ -13,7 +13,7 @@
    <string>Shaman - Building Packages</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
+   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
@@ -422,7 +422,7 @@ p, li { white-space: pre-wrap; }
            <enum>Qt::AutoText</enum>
           </property>
           <property name="pixmap" >
-           <pixmap resource="qtpacman.qrc" >:/Icons/icons/applications-development.png</pixmap>
+           <pixmap resource="shaman.qrc" >:/Icons/icons/applications-development.png</pixmap>
           </property>
           <property name="scaledContents" >
            <bool>true</bool>
@@ -467,7 +467,7 @@ p, li { white-space: pre-wrap; }
           <string>Abort</string>
          </property>
          <property name="icon" >
-          <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+          <iconset resource="shaman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
          </property>
         </widget>
        </item>
@@ -490,7 +490,7 @@ p, li { white-space: pre-wrap; }
           <string>Reduce To Tray</string>
          </property>
          <property name="icon" >
-          <iconset resource="qtpacman.qrc" >:/Icons/icons/user-invisible.png</iconset>
+          <iconset resource="shaman.qrc" >:/Icons/icons/user-invisible.png</iconset>
          </property>
         </widget>
        </item>
@@ -501,7 +501,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections/>
 </ui>
