--- a/trunk/shaman/ui/newsDialog.ui
+++ b/trunk/shaman/ui/newsDialog.ui
@@ -32,7 +32,7 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
        </property>
       </column>
       <column>
@@ -40,7 +40,7 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/mail-message-new.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/mail-message-new.png</iconset>
        </property>
       </column>
       <column>
@@ -48,7 +48,7 @@
         <string>Title</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/draw-text.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/draw-text.png</iconset>
        </property>
       </column>
       <column>
@@ -56,7 +56,7 @@
         <string>Link</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
        </property>
       </column>
       <column>
@@ -87,7 +87,7 @@
          <string>Mark as Read</string>
         </property>
         <property name="icon" >
-         <iconset resource="qtpacman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
+         <iconset resource="shaman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
         </property>
        </widget>
       </item>
@@ -97,7 +97,7 @@
          <string>Open in Browser</string>
         </property>
         <property name="icon" >
-         <iconset resource="qtpacman.qrc" >:/Icons/icons/document-open.png</iconset>
+         <iconset resource="shaman.qrc" >:/Icons/icons/document-open.png</iconset>
         </property>
        </widget>
       </item>
@@ -107,7 +107,7 @@
          <string>Refresh</string>
         </property>
         <property name="icon" >
-         <iconset resource="qtpacman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
+         <iconset resource="shaman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
         </property>
        </widget>
       </item>
@@ -130,7 +130,7 @@
          <string>Close</string>
         </property>
         <property name="icon" >
-         <iconset resource="qtpacman.qrc" >:/Icons/icons/application-exit.png</iconset>
+         <iconset resource="shaman.qrc" >:/Icons/icons/application-exit.png</iconset>
         </property>
        </widget>
       </item>
@@ -140,7 +140,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections/>
 </ui>
