--- a/trunk/shaman/ui/transactionDialog.ui
+++ b/trunk/shaman/ui/transactionDialog.ui
@@ -13,7 +13,7 @@
    <string>Processing Queue...</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
+   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="1" column="0" >
@@ -58,7 +58,7 @@
         <string/>
        </property>
        <property name="pixmap" >
-        <pixmap resource="qtpacman.qrc" >:/Icons/icons/view-history.png</pixmap>
+        <pixmap resource="shaman.qrc" >:/Icons/icons/view-history.png</pixmap>
        </property>
        <property name="scaledContents" >
         <bool>true</bool>
@@ -77,7 +77,7 @@
         <string/>
        </property>
        <property name="pixmap" >
-        <pixmap resource="qtpacman.qrc" >:/Icons/icons/view-history.png</pixmap>
+        <pixmap resource="shaman.qrc" >:/Icons/icons/view-history.png</pixmap>
        </property>
        <property name="scaledContents" >
         <bool>true</bool>
@@ -96,7 +96,7 @@
         <string/>
        </property>
        <property name="pixmap" >
-        <pixmap resource="qtpacman.qrc" >:/Icons/icons/view-history.png</pixmap>
+        <pixmap resource="shaman.qrc" >:/Icons/icons/view-history.png</pixmap>
        </property>
        <property name="scaledContents" >
         <bool>true</bool>
@@ -109,7 +109,7 @@
         <string/>
        </property>
        <property name="pixmap" >
-        <pixmap resource="qtpacman.qrc" >:/Icons/icons/view-history.png</pixmap>
+        <pixmap resource="shaman.qrc" >:/Icons/icons/view-history.png</pixmap>
        </property>
       </widget>
      </item>
@@ -137,7 +137,7 @@
         <string>More Details...</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/help-about.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/help-about.png</iconset>
        </property>
        <property name="checkable" >
         <bool>true</bool>
@@ -166,7 +166,7 @@
         <string>Abort</string>
        </property>
        <property name="icon" >
-        <iconset resource="qtpacman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+        <iconset resource="shaman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
        </property>
       </widget>
      </item>
@@ -237,7 +237,7 @@ p, li { white-space: pre-wrap; }
          <string/>
         </property>
         <property name="pixmap" >
-         <pixmap resource="qtpacman.qrc" >:/Icons/icons/edit-redo.png</pixmap>
+         <pixmap resource="shaman.qrc" >:/Icons/icons/edit-redo.png</pixmap>
         </property>
         <property name="scaledContents" >
          <bool>true</bool>
@@ -257,7 +257,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="qtpacman.qrc" />
+  <include location="shaman.qrc" />
  </resources>
  <connections>
   <connection>
