--- a/trunk/shaman/ui/logViewer.ui
+++ b/trunk/shaman/ui/logViewer.ui
@@ -12,6 +12,9 @@
   <property name="windowTitle" >
    <string>Shaman - Log Viewer</string>
   </property>
+  <property name="windowIcon" >
+   <iconset resource="shaman.qrc" >:/Icons/icons/accessories-text-editor.png</iconset>
+  </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
     <widget class="QGroupBox" name="dateFromBox" >
@@ -156,8 +159,8 @@
      <property name="html" >
       <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans';">&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
+&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">&lt;/p>&lt;/body>&lt;/html></string>
      </property>
     </widget>
    </item>
