--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -223,9 +223,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -1045,7 +1045,7 @@ and Pacman.</string>
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" >
+       <item row="4" column="0" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -1057,6 +1057,29 @@ and Pacman.</string>
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="3" column="0" >
+        <widget class="QGroupBox" name="groupBox_12" >
+         <property name="title" >
+          <string>Interface</string>
+         </property>
+         <layout class="QVBoxLayout" >
+          <item>
+           <widget class="QCheckBox" name="autoStartBox" >
+            <property name="text" >
+             <string>Start Shaman Automatically on X Startup</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="noRootBox" >
+            <property name="text" >
+             <string>Forbid starting Shaman as root</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </item>
       </layout>
      </widget>
