--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -68,7 +68,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QVBoxLayout" >
@@ -229,9 +229,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans';">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans';">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -391,7 +391,7 @@ p, li { white-space: pre-wrap; }
        <item row="1" column="0" >
         <widget class="QTabWidget" name="repoTab" >
          <property name="currentIndex" >
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="officialTab" >
           <attribute name="title" >
@@ -524,76 +524,106 @@ Please note that packages from Unstable and Testing may break your system.</stri
           <attribute name="icon" >
            <iconset resource="shaman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</iconset>
           </attribute>
-          <widget class="QWidget" name="layoutWidget" >
-           <property name="geometry" >
-            <rect>
-             <x>5</x>
-             <y>5</y>
-             <width>665</width>
-             <height>477</height>
-            </rect>
-           </property>
-           <layout class="QVBoxLayout" >
-            <item>
-             <layout class="QHBoxLayout" >
-              <item>
-               <widget class="QLabel" name="label_15" >
-                <property name="text" >
-                 <string/>
-                </property>
-                <property name="pixmap" >
-                 <pixmap resource="shaman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</pixmap>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="KDEModLabel" >
-                <property name="text" >
-                 <string>KDEMod is an improved version of KDE, an Arch Linux exclusive. Featuring an 
+          <layout class="QVBoxLayout" >
+           <item>
+            <layout class="QVBoxLayout" >
+             <item>
+              <layout class="QHBoxLayout" >
+               <item>
+                <widget class="QLabel" name="label_15" >
+                 <property name="text" >
+                  <string/>
+                 </property>
+                 <property name="pixmap" >
+                  <pixmap resource="shaman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</pixmap>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="KDEModLabel" >
+                 <property name="text" >
+                  <string>KDEMod is an improved version of KDE, an Arch Linux exclusive. Featuring an 
 improved Qt build, compatible with Arch Linux standard Qt's, an improved theme,
 and lots of addons, KDEMod is the best way to taste the ease and the power
 of KDE with the simplicity and the power of Arch.</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QCheckBox" name="KDEMod3Box" >
-              <property name="text" >
-               <string>KDEMod 3 Repository</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QCheckBox" name="KDEMod3TestBox" >
-              <property name="text" >
-               <string>KDEMod 3 Testing Repository</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QCheckBox" name="KDEMod4Box" >
-              <property name="text" >
-               <string>KDEMod 4 Repository (Unstable, testers only)</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" >
-               <size>
-                <width>663</width>
-                <height>351</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </widget>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="KDEMod3Box" >
+               <property name="text" >
+                <string>KDEMod 3 Repository</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="KDEMod3TestBox" >
+               <property name="text" >
+                <string>KDEMod 3 Testing Repository</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="KDEMod4Box" >
+               <property name="text" >
+                <string>KDEMod 4 Repository (Unstable, testers only)</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer>
+               <property name="orientation" >
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" >
+                <size>
+                 <width>663</width>
+                 <height>351</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox_13" >
+               <property name="title" >
+                <string>Server</string>
+               </property>
+               <layout class="QGridLayout" >
+                <item row="0" column="0" >
+                 <widget class="QLabel" name="mirrorLabel_2" >
+                  <property name="text" >
+                   <string>Mirror:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1" >
+                 <widget class="QComboBox" name="KDEModMirrorBox" />
+                </item>
+                <item row="2" column="1" >
+                 <layout class="QHBoxLayout" >
+                  <item>
+                   <widget class="QLineEdit" name="addKDEModMirrorLine" />
+                  </item>
+                  <item>
+                   <widget class="QPushButton" name="addKDEModMirrorButton" >
+                    <property name="text" >
+                     <string>Add Mirror</string>
+                    </property>
+                    <property name="icon" >
+                     <iconset resource="shaman.qrc" >:/Icons/icons/list-add.png</iconset>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </widget>
          <widget class="QWidget" name="thirdPartyTab" >
           <attribute name="title" >
