--- a/trunk/shaman/ui/newsDialog.ui
+++ b/trunk/shaman/ui/newsDialog.ui
@@ -32,7 +32,8 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/mail-mark-unread-new.png</normaloff>:/Icons/icons/mail-mark-unread-new.png</iconset>
        </property>
       </column>
       <column>
@@ -40,15 +41,17 @@
         <string/>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/mail-message-new.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/mail-message-new.png</normaloff>:/Icons/icons/mail-message-new.png</iconset>
        </property>
       </column>
       <column>
        <property name="text" >
-        <string>Title</string>
+        <string>News-Title</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/draw-text.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/draw-text.png</normaloff>:/Icons/icons/draw-text.png</iconset>
        </property>
       </column>
       <column>
@@ -56,7 +59,8 @@
         <string>Link</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/application-rss+xml.png</normaloff>:/Icons/icons/application-rss+xml.png</iconset>
        </property>
       </column>
       <column>
@@ -87,7 +91,8 @@
          <string>Mark as Read</string>
         </property>
         <property name="icon" >
-         <iconset resource="shaman.qrc" >:/Icons/icons/mail-mark-unread-new.png</iconset>
+         <iconset resource="shaman.qrc" >
+          <normaloff>:/Icons/icons/mail-mark-unread-new.png</normaloff>:/Icons/icons/mail-mark-unread-new.png</iconset>
         </property>
        </widget>
       </item>
@@ -97,7 +102,8 @@
          <string>Open in Browser</string>
         </property>
         <property name="icon" >
-         <iconset resource="shaman.qrc" >:/Icons/icons/document-open.png</iconset>
+         <iconset resource="shaman.qrc" >
+          <normaloff>:/Icons/icons/document-open.png</normaloff>:/Icons/icons/document-open.png</iconset>
         </property>
        </widget>
       </item>
@@ -107,7 +113,8 @@
          <string>Refresh</string>
         </property>
         <property name="icon" >
-         <iconset resource="shaman.qrc" >:/Icons/icons/application-rss+xml.png</iconset>
+         <iconset resource="shaman.qrc" >
+          <normaloff>:/Icons/icons/application-rss+xml.png</normaloff>:/Icons/icons/application-rss+xml.png</iconset>
         </property>
        </widget>
       </item>
@@ -116,7 +123,7 @@
         <property name="orientation" >
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" >
+        <property name="sizeHint" stdset="0" >
          <size>
           <width>40</width>
           <height>20</height>
@@ -127,10 +134,11 @@
       <item>
        <widget class="QPushButton" name="closeButton" >
         <property name="text" >
-         <string>Close</string>
+         <string comment="close the dialog" >Close</string>
         </property>
         <property name="icon" >
-         <iconset resource="shaman.qrc" >:/Icons/icons/application-exit.png</iconset>
+         <iconset resource="shaman.qrc" >
+          <normaloff>:/Icons/icons/application-exit.png</normaloff>:/Icons/icons/application-exit.png</iconset>
         </property>
        </widget>
       </item>
