--- a/trunk/shaman/ui/pkgProperties.ui
+++ b/trunk/shaman/ui/pkgProperties.ui
@@ -204,6 +204,12 @@ p, li { white-space: pre-wrap; }
            <property name="text" >
             <string>TextLabel</string>
            </property>
+           <property name="scaledContents" >
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap" >
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="7" column="1" >
