--- a/trunk/shaman/ui/pkgProperties.ui
+++ b/trunk/shaman/ui/pkgProperties.ui
@@ -152,6 +152,12 @@ p, li { white-space: pre-wrap; }
            <property name="text" >
             <string>TextLabel</string>
            </property>
+           <property name="scaledContents" >
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap" >
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="4" column="4" >
@@ -196,6 +202,12 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="installdateLabel" >
            <property name="text" >
             <string>TextLabel</string>
+           </property>
+           <property name="scaledContents" >
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap" >
+            <bool>true</bool>
            </property>
           </widget>
          </item>
